# pidgin-musictracker

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.mingw  NEWS  README  README.in  THANKS  configure.ac  libtool  reconf
doc/: Makefile.am
installer/: Makefile.am  musictracker.nsi
m4/: Makefile.am
packaging/: package-release  pidgin-musictracker.ebuild
po/: LINGUAS  Makefile.mingw  Makevars  POTFILES.in  de.po  it.po  musictracker.pot
protocols/: Makefile.am
protocols/msn/: Makefile.am
src/: Makefile.am  Makefile.mingw  actions.c  actions.h  amarok.c  audacious.c  banshee.c  config-win32.h  dbusbird.c  exaile.c  filter.c  filter.h  foobar2000.c  iTunesCOMInterface.h  itunes.cpp  lastfm.c  listen.c  moc.c  mpd.c  mpris.c  msn-compat.c  musictracker.c  musictracker.h  preferences.c  quodlibet.c  rhythmbox.c  squeezecenter.c  utils.c  utils.h  vagalume.c  wa_ipc.h  winamp.c  wmp.c  xmms.c  xmms2.c  xmmsctrl.c
