# Copyright (C) 2006 Arijit De <de.arijit@gmail.com>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

EXTRA_DIST =  cmdproc.h \
command.h \
dialog.h \
directconn.h \
error.h \
group.h \
history.h \
httpconn.h \
internal.h \
msg.h \
msn-utils.h \
msn.h \
nexus.h \
notification.h \
object.h \
page.h \
servconn.h \
session.h \
slp.h \
slpcall.h \
slplink.h \
slpmsg.h \
slpsession.h \
state.h \
switchboard.h \
sync.h \
table.h \
transaction.h \
user.h \
userlist.h
